kube/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-ingress-service
  namespace: app-ns
spec:
  selector: {}
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer  # Single LoadBalancer for all service
